--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,7 +15,8 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-    }
+        maven { url 'https://jitpack.io' }
+}
 }
 
 rootProject.buildDir = '../build'
